never float right aligned cells. fixes #16

--- a/less/editor.less
+++ b/less/editor.less
@@ -6,6 +6,7 @@
 
         td.right {
             text-align: right;
+            float: none; // fix incompatibility with some templates (like ICKE)
         }
 
         td.center {
